# hangman

./: LICENSE  README.md  hangman.cabal
data/: dict.txt
exe/: Main.hs
src/: Game.hs  MySplit.hs  RandomWords.hs  Split.hs
test/: RandomWordsSpec.hs  SpecHelper.hs
