name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base        >= 4.7 && < 5
                     , hangman

library
  hs-source-dirs:      src
  exposed-modules:     RandomWords
                     , Game
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random      >= 1.1 && < 1.2
                     , split       >= 0.2.3 && < 0.3
