name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/huanhulan/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Lex.Huang
maintainer:          huanhulan83@gmail.com
copyright:           2020 Lex.Huang
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base        >= 4.7 && < 5
                     , hangman

library
  hs-source-dirs:      src
  exposed-modules:     RandomWords
                     , Game
  default-language:    Haskell2010
  build-depends:       base        >= 4.7 && < 5
                     , random      >= 1.1 && < 1.2
                     , split       >= 0.2.3 && < 0.3
test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base        >= 4.7 && < 5
                     , hspec       >= 2.5.4
                     , QuickCheck
                     , hangman
  other-modules:       RandomWordsSpec
                     , SpecHelper